# repeatit

./: .gitignore
repeatit/: manage.py  pylintrc  pyproject.toml  setup.cfg
repeatit/repeatit/: asgi.py  settings.py  urls.py  wsgi.py
repeatit/repeatit_app/: apps.py  forms.py  models.py  urls.py  views.py
repeatit/repeatit_app/static/repeatit_app/: style.css
repeatit/repeatit_app/templates/cards/: base.html
repeatit/repeatit_app/templates/registration/: login.html  logout.html
repeatit/repeatit_app/templates/repeatit_app/: base.html  box.html  box_links.html  card.html  check_form.html  flashcard_form.html  flashcard_list.html  navigation.html
repeatit/repeatit_app/templatetags/: flashcard_tags.py
