[metadata]
name = repeatit
version = 0.1.0
author = Elena Kotlyarova
author_email = elenakotlyrova@gmail.com
description = Flashcard application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nimeriya778/repeatit
keywords = flashcard, memorize

[options]
packages = repeatit, repeatit_app
python_requires = >=3.10
zip_safe = True
install_requires =
    django ~=4.1
    django-stubs[compatible-mypy] ~=1.13

